force-app/main/default/objects/CLQ_Staff_Schedule__c/CLQ_Staff_Schedule__c.object-meta.xml
<CustomObject>
    <label>Staff Schedule</label>
    <nameField>
        <displayFormat>Schedule-{00000}</displayFormat>
        <label>Staff Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>