force-app/main/default/objects/CLQ_Staff_Schedule__c/fields/CLQ_End_Time_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_End_Time_2__c</fullName>
    <label>End Time 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Time_Intervals</valueSetName>
    </valueSet>
</CustomField>