force-app/main/default/objects/CLQ_Staff_Schedule__c/fields/CLQ_Hours_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Hours_Schedule__c</fullName>
    <label>Hours Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>