force-app/main/default/objects/CLQ_Staff_Schedule__c/fields/CLQ_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Staff_Name__c</fullName>
    <label>Staff Name</label>
    <referenceTo>CLQ_Staff_Record__c</referenceTo>
    <relationshipLabel>Staff Schedule</relationshipLabel>
    <relationshipName>Staff_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>