force-app/main/default/objects/CLQ_Staff_Schedule__c/fields/CLQ_Start_Time_1__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Start_Time_1__c</fullName>
    <description>User can set 2 ranges for start/end time for each schedule.</description>
    <inlineHelpText>Hours of Operation start time for range 1.</inlineHelpText>
    <label>Start Time 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Time_Intervals</valueSetName>
    </valueSet>
</CustomField>