force-app/main/default/objects/CLQ_Staff_Schedule__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <formula>CLQ_Staff_Name__r.CLQ_Inspection__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection</label>
    <type>Text</type>
</CustomField>