force-app/main/default/objects/CLQ_Staff_Schedule__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>Job_Role__c</referenceTo>
    <relationshipLabel>Staff Schedule</relationshipLabel>
    <relationshipName>Staff_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>