force-app/main/default/objects/CLQ_Staff_Schedule__c/recordTypes/New_Staff_Schedule_Records.recordType-meta.xml
<RecordType>
    <fullName>New_Staff_Schedule_Records</fullName>
    <active>true</active>
    <label>New Staff Schedule Records</label>
</RecordType>